# Task-manager

./: .gitignore  Procfile  README.md  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: flake8.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_created_at.py
task_manager/static/: staticfiles.json
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py
task_manager/tasks/: admin.py  filter.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_status.py  0003_tasklabels_task_labels.py  0004_alter_task_labels.py  0005_alter_task_autor.py  0006_alter_task_created_at.py
task_manager/templates/: 404.html  base.html  delete_form.html  form.html  index.html  login.html  navigation.html
task_manager/templates/labels/: create_label.html  delete_label.html  index.html  update_label.html
task_manager/templates/statuses/: create_status.html  delete_status.html  index.html  update_status.html
task_manager/templates/tasks/: create_task.html  delete_task.html  index.html  open_task.html  update_task.html
task_manager/tests/: constants.py  test_index.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py  tets_mixins.py
task_manager/users/: admin.py  forms.py  urls.py  views.py
(+12 files in other folders)
