[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["RomanUtolin <romautolin@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-bootstrap4 = "^23.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
