[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["RomanUtolin <romautolin@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-bootstrap4 = "^23.1"
python-dotenv = "^1.0.0"
django-filter = "^23.2"
whitenoise = "^6.4.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.6"
isort = "^5.12.0"
rollbar = "^0.16.3"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
